Update 'backend-tests-java-springboot-kxuzvjgs' component image to: quay.io/rhtap_qe/backend-tests-java-springboot-kxuzvjgs:e90cb8bd85e32ad266dd79371b0c9c98111ec0a2@sha256:dbb17f84f1a26a5c55b5f366fe77485c58fc30170d34c0584b68cb266aa327ef

--- a/components/backend-tests-java-springboot-kxuzvjgs/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-java-springboot-kxuzvjgs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-java-springboot-kxuzvjgs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-java-springboot-kxuzvjgs:e90cb8bd85e32ad266dd79371b0c9c98111ec0a2@sha256:dbb17f84f1a26a5c55b5f366fe77485c58fc30170d34c0584b68cb266aa327ef
+          name: container-image
